# vws-test-fixtures

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  MANIFEST.in  Makefile  README.md  README.rst  __init__.py  conftest.py  dev-requirements.txt  lint.mk  pyproject.toml  readthedocs.yaml  requirements.txt  setup.cfg  setup.py  spelling_private_dict.txt
.github/workflows/: ci.yml  dependabot-merge.yml  lint.yml  publish-site.yml  release.yml
admin/: release.py  release.sh
docs/: Makefile
docs/source/: api-reference.rst  conf.py  contributing.rst  index.rst  release-process.rst
requirements/: dev-requirements.txt
src/vws_test_fixtures/: __init__.py  _version.py  images.py  plugin.py
tests/: __init__.py  test_fixtures.py
vws_auth_tools/: __init__.py
