[flake8]
exclude=./.eggs,
        ./build/,

[doc8]
max-line-length = 2000
ignore-path = ./node_modules,./src/*.egg-info/,./docs/build/spelling/output.txt,./.eggs,src/*/_setuptools_scm_version.txt,./docs/build

[metadata]
name = VWS Test Fixtures
description = Authentication and authorization tools for interacting with the Vuforia Web Services (VWS) API.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = vuforia vws
license = MIT License
license_file = LICENSE
classifiers =
    Operating System :: POSIX
    Environment :: Web Environment
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Framework :: Pytest
url = https://github.com/VWS-Python/vws-test-fixtures
author = Adam Dangoor
author_email = adamdangoor@gmail.com

[options]
zip_safe = False
include_package_data = True
# Avoid dependency links because they are not supported by Read The Docs.
#
# Also, they require users to use ``--process-dependency-links``.
dependency_links =
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.package_data]
vws_test_fixtures =
    py.typed

[options.entry_points]
pytest11 =
    vws_test_fixtures = vws_test_fixtures.plugin
